# fledge-plugin-hangman

./: Cargo.toml  README.md  fledge.toml  plugin.toml
.codex/skills/spec-sync/: SKILL.md
.github/workflows/: ci.yml  pages.yml  trust.yml
.specsync/: adoption-report.json  registry.toml  sdd.json
.specsync/archive/changes/2026-07-14-CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-hangman-fledge-plugin/: change.md  state.json
.specsync/archive/changes/2026-07-14-CHG-0002-align-hangman-closed-input-and-plugin-manifest-governance-with-the-shipped-imple/: change.md  docs.md  state.json
.specsync/archive/changes/2026-07-14-CHG-0002-align-hangman-closed-input-and-plugin-manifest-governance-with-the-shipped-imple/deltas/: hangman.md
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-hangman-fledge-plugin/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-hangman-fledge-plugin/deltas/: hangman.md
.specsync/changes/CHG-0002-align-hangman-closed-input-and-plugin-manifest-governance-with-the-shipped-imple/: approvals.json  change.md  context.md  requirements.md  state.json  tasks.md  testing.md  verification.json
docs/: index.html
specs/hangman/: context.md  hangman.spec.md  requirements.md  tasks.md  testing.md
src/: main.rs
